[1.20.9]
- Continue to fix tag duration report